Правки css. Освоил min-width

--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
 					<img class = "main-logo" src = "./Project/tesla-wordmark-red.svg" alt = "logo-tesla">
 				</a>
 			</div>
-			<nav class = "header__menu">
-				<div class = "header__wrapper_item">
-					<a href = "#" class = "header__link">Model S</a>
-					<a href = "#" class = "header__link">Model X</a>
-					<a href = "#" class = "header__link">Model 3</a>
-					<a href = "#" class = "header__link">Roadster</a>
-					<a href = "#" class = "header__link">Energy</a>
+			<div class = "header__wrapper_item">
+				<a href = "#" class = "header__link">Model S</a>
+				<a href = "#" class = "header__link">Model X</a>
+				<a href = "#" class = "header__link">Model 3</a>
+				<a href = "#" class = "header__link">Roadster</a>
+				<a href = "#" class = "header__link">Energy</a>
+			</div>
+			<div class = "header__wrapper">
+				<a href = "#" class = "header__wrapper_link">Магазин</a>
+				<a href = "#" class = "header__wrapper_link">Войти</a>
+				<div class = "burger">
+					<span class = "burger__icon"></span>
+					<span class = "burger__icon"></span>
+					<span class = "burger__icon"></span>
 				</div>
-				<div class = "header__wrapper">
-						<a href = "#" class = "header__wrapper_link header__link">Магазин</a>
-						<a href = "#" class = "header__wrapper_link header__link">Войти</a>
-					<div class = "burger">
-						<span class = "burger__icon"></span>
-						<span class = "burger__icon"></span>
-						<span class = "burger__icon"></span>
-					</div>
-				</div>
-			</nav>
+			</div>
 		</header>
 		<section class = "section-main">
 			<h1 class = "section-main__title">
@@ -68,9 +66,11 @@
 						</div>
 					</div>
 				</div>
-				<div class = "section-main__item_btns button_main">
+				<div class = "section-main__item_btns">
 					<div class = "btn_test-drive button__item_alt">
-						<img class = "btn__item_icon button__item_icon-main" src = "./Project/steering-wheel.svg" alt = "logo-steering-wheel">
+						<div class = "btn__wrap">
+							<img class = "btn__item_icon button__item_icon-main" src = "./Project/steering-wheel.svg" alt = "logo-steering-wheel">
+						</div>
 						<a href = "#" class = "button__item_link">Тест драйв</a>
 					</div>
 					<div class = "button__item_big-order button__item_alt-right">
@@ -138,7 +138,7 @@
 						</div>
 					</div>
 				</div>
-				<div class = "button button_main">
+				<div class = "button">
 					<div class = "button__item_big-info button__item_alt">	
 						<img class = "button__item_icon button__item_icon-main" src = "./Project/icon_info.svg" alt = "logo-info">
 						<a href="#" class = "button__item_link-info">Узнать больше</a>
@@ -245,12 +245,12 @@
 							</span>
 						</div>
 					</div>
-				<div class = "button button_main button_down">
+				<div class = "button">
 					<div class = "button__item_big-info button__item_alt">
 						<img class = "button__item_icon button__item_icon-main" src = "./Project/icon_info.svg" alt = "logo-info">	
 						<a href="#" class = "button__item_link-info">Узнать больше</a>
 					</div>
-					<div class = "button__item_big-order button__item_big-down">
+					<div class = "button__item_big-order button__item_big-right">
 						<a href="#" class = "button__item_link btn__item_order button__item_link-white">Заказать</a>
 					</div>
 				</div>
