--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 	</head>
 	<body>
 		<header class = "header">
-			<div class = header__wrapper_logo>
+			<div class = header__logo>
 				<a href = "\" class = "header__link-home">
-					<img class = "main-logo" src = "./Project/tesla-wordmark-red.svg" alt = "logo-tesla">
+					<img class = "header__main-logo" src = "./Project/tesla-wordmark-red.svg" alt = "logo-tesla">
 				</a>
 			</div>
-			<div class = "header__wrapper_item">
-				<a href = "#" class = "header__link">Model S</a>
-				<a href = "#" class = "header__link">Model X</a>
-				<a href = "#" class = "header__link">Model 3</a>
-				<a href = "#" class = "header__link">Roadster</a>
-				<a href = "#" class = "header__link">Energy</a>
+			<div class = "header__wrapper header__wrapper_center">
+				<a href = "#" class = "header__link header__link_center">Model S</a>
+				<a href = "#" class = "header__link header__link_center">Model X</a>
+				<a href = "#" class = "header__link header__link_center">Model 3</a>
+				<a href = "#" class = "header__link header__link_center">Roadster</a>
+				<a href = "#" class = "header__link header__link_center">Energy</a>
 			</div>
-			<div class = "header__wrapper">
-				<a href = "#" class = "header__wrapper_link">Магазин</a>
-				<a href = "#" class = "header__wrapper_link">Войти</a>
-				<div class = "burger">
+			<div class = "header__wrapper header__wrapper_right">
+				<a href = "#" class = "header__link header__link_right">Магазин</a>
+				<a href = "#" class = "header__link header__link_right">Войти</a>
+				<div class = "header__burger burger">
 					<span class = "burger__icon"></span>
 					<span class = "burger__icon"></span>
 					<span class = "burger__icon"></span>
@@ -40,138 +40,132 @@
 			</div>
 			<div class = "section-main__img">
 				<div class = "section-main__modelS-logo">
-					<img class = "car-logo" src = "./Project/tesla_hd.svg" alt = "background-car">
+					<img class = "section-main__car-logo" src = "./Project/tesla_hd.svg" alt = "background-car">
 				</div>
 			</div>
 			<div class = "section-main__wrapper">
-				<div class = "section-main__item_info">
-					<div class = "character character_left">	
-						<img class = "character__item_icon character__item_icon-left" src = "./Project/speedometer.svg" alt = "logo-speedometer">
-						<div class = "character__item_big character__item_font">
+				<div class = "section-main__item-info">
+					<div class = "section-main__character character character_left">	
+						<img class = "character__icon character__icon_left" src = "./Project/speedometer.svg" alt = "logo-speedometer">
+						<div class = "character__item">
 							2,7
-							<span class = "character__item_little"> 
+							<span class = "character__desc-little"> 
 								сек
 							</span>
-							<p class = "character__item_small">0-100 км/час</p>
+							<p class = "character__desc-small">0-100 км/час</p>
 						</div>
 					</div>
-					<div class = "character character_right">
-						<img class = "character__item_icon character__item_icon-right" src = "./Project/road_icon.svg" alt = "logo-road">
-						<div class = "character__item_big character__item_font">
+					<div class = "section-main__character character character_right">
+						<img class = "character__icon character__icon_right" src = "./Project/road_icon.svg" alt = "logo-road">
+						<div class = "character__item">
 							632
-							<span class = "character__item_little">
+							<span class = "character__desc-little">
 								км
 							</span>
-							<p class = "character__item_small">запас хода</p>
+							<p class = "character__desc-small">запас хода</p>
 						</div>
 					</div>
 				</div>
-				<div class = "section-main__item_btns">
-					<div class = "btn_test-drive button__item_alt">
-						<div class = "btn__wrap">
-							<img class = "btn__item_icon button__item_icon-main" src = "./Project/steering-wheel.svg" alt = "logo-steering-wheel">
+				<div class = "section-main__block-buttons">
+					<div class = "section-main__button button">
+						<div class = "button__wrap">
+							<img class = "button__icon button__icon_off" src = "./Project/steering-wheel.svg" alt = "logo-steering-wheel">
 						</div>
-						<a href = "#" class = "button__item_link">Тест драйв</a>
+						<a href = "#" class = "button__link button__link_test-drive">Тест драйв</a>
 					</div>
-					<div class = "button__item_big-order button__item_alt-right">
-						<a href="#" class = "button__item_link btn__item_order">Заказать</a>
+					<div class = "button-order section-main__button-order">
+						<a href="#" class = "button__link button-order__link">Заказать</a>
 					</div>
 				</div>
 			</div>
-			<div class = "section-main__item_control-down">
-				<img class = "control-down" src = "./Project/vector.svg" alt = "logo-control-down">
+			<div class = "section-main__control-down">
+				<img class = "section-main__icon_control-down" src = "./Project/vector.svg" alt = "logo-control-down">
 			</div>
 		</section>
 		<section class = "section-desc section-up">
 			<div class = "section-desc__wrap section-desc__wrap_up">
 				<h1 class = "section-desc__title">Model S</h1>
 			</div>
-			<article class = "text">
-				<div class = "text__wrap_main">
-					<div class = "text__wrap_title">
-						<h2 class = "text__title">
-							Будущее вождения
-						</h2>
-					</div>
+			<article class = "section-desc__text text">
+				<div class = "text__wrap">
+					<h2 class = "text__title">
+						Будущее вождения
+					</h2>
 					<p class = "text__content">
-						Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным <br>17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
+						Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17&#8209дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 					</p>
 				</div>
-				<div class = "text__wrap_character text__wrap_character-up">
+				<div class = "text__character text__character_up">
 					<div class = "text__item">
-						<div class = "text__item_small text__item_small-screen">
-							<img class = "text__item_icon" src = "./Project/screen.svg" alt = "logo-screen">
+						<div class = "text__item_small text__small-screen">
+							<img class = "text__icon" src = "./Project/screen.svg" alt = "logo-screen">
 						</div>
-						<div class = "text__item_big character__item_font">
+						<div class = "text__item_big character__item">
 							17 
-							<span class = "character__item_little">
+							<span class = "character__desc-little">
 								дюймов
 							</span>
-							<p class = "character__item_small">
+							<p class = "character__desc-small">
 								Большой дисплей
 							</p>
 						</div>
 					</div>
 					<div class = "text__item">
-						<div class = "text__item_small text__item_small-wifi">
-							<img class = "text__item_icon" src = "./Project/wifi.svg" alt = "logo-wifi">
+						<div class = "text__item_small text__small-wifi">
+							<img class = "text__icon" src = "./Project/wifi.svg" alt = "logo-wifi">
 						</div>
-						<div class = "character__item_medium">	
+						<div class = "character__desc-medium">	
 							Беспроводное <br> обновление ПО
-							<p class = "character__item_small">
+							<p class = "character__desc-small">
 								Повышенная <br> функциональность
 							</p>
 						</div>
 					</div>
 					<div class = "text__item text__item_bag">
-						<div class = "text__item_small text__item_small-bag">
-							<img class = "text__item_icon" src = "./Project/bag.svg" alt = "logo-bag">
+						<div class = "text__item_small text__small-bag">
+							<img class = "text__icon" src = "./Project/bag.svg" alt = "logo-bag">
 						</div>
-						<div class = "text__item_big character__item_font">	
+						<div class = "text__item_big character__item">	
 							894 
-							<span class = "character__item_little">
+							<span class = "character__desc-little">
 								литра
 							</span>
-							<p class = "character__item_small">
+							<p class = "character__desc-small">
 								Объём грузового <br> пространства
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class = "button">
-					<div class = "button__item_big-info button__item_alt">	
-						<img class = "button__item_icon button__item_icon-main" src = "./Project/icon_info.svg" alt = "logo-info">
-						<a href="#" class = "button__item_link-info">Узнать больше</a>
+				<div class = "buttons">
+					<div class = "button">	
+						<img class = "button__icon" src = "./Project/icon_info.svg" alt = "logo-info">
+						<a href="#" class = "button__link button__link_info">Узнать больше</a>
 					</div>
-					<div class = "button__item_big-order button__item_big-right">
-						<a href="#" class = "button__item_link btn__item_order button__item_link-white">Заказать</a>
+					<div class = "button-order section-desc__button-order">
+						<a href="#" class = "button__link button-order__link button-order__link_color">Заказать</a>
 					</div>
 				</div>
 			</article>
 		</section>
 		<section class = "section-desc section-down">
-			<div class = "section-desc__wrap section-desc__wrap-down">
-				<div class = "safe-body__item_corps">
-					<img class = "item__icon_corps" src = "./Project/car_corps.svg" alt = "logo-corps">
+			<div class = "section-desc__wrap section-desc__wrap_down">
+				<div class = "section-desc__content">
+					<img class = "section-desc__corps-icon" src = "./Project/car_corps.svg" alt = "logo-corps">
 				</div>
 			</div>
-			<div class = "text">
-				<div class = "text__wrap_main text__wrap_down">
-					<div class = "text__wrap_title text__wrap_title-down">
-						<h2 class = "text__title text__title_down">
-							Самый безопасный автомобиль в мире
-						</h2>
-					</div>
-					<p class = "text__content text__content_down">Модель S достигла наивысшей оценки безопасности любого автомобиля, <br> когда-либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+			<div class = "section-desc__text text">
+				<div class = "text__wrap text__wrap_down">
+					<h2 class = "text__title text__title_down">
+						Самый безопасный автомобиль в мире
+					</h2>
+					<p class = "text__content text__content_down">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда&#173либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров &#173 от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
 				</div>
-				<div class = "text__wrap_character text__wrap_character-down">
-					<div class = "text__wrap_subtitle">
-						<h2 class = "text__title text__subtitle">
-							Оценка защиты:
-						</h2>
-					</div>
-					<div class = "text__wrap_section">
-						<div class = "star">
+				<div class = "text__character text__character_down">
+					<h2 class = "text__title text__subtitle">
+						Оценка защиты:
+					</h2>
+					<div class = "text__block">
+						<div class = "section-desc__block star">
 							<div class = "star__title">
 								Спереди
 							</div>
@@ -183,7 +177,7 @@
 								<img class = "star__item" src = "./Project/star.svg" alt = "logo-star">
 							</div>
 						</div>
-						<div class = "star">
+						<div class = "section-desc__block star">
 							<div class = "star__title">
 								Сбоку
 							</div>
@@ -195,7 +189,7 @@
 								<img class = "star__item" src = "./Project/star.svg" alt = "logo-star">
 							</div>
 						</div>
-						<div class = "star">
+						<div class = "section-desc__block star">
 							<div class = "star__title">
 								Сбоку
 								<span class = "star__title_add">
@@ -210,7 +204,7 @@
 								<img class = "star__item" src = "./Project/star.svg" alt = "logo-star">
 							</div>
 						</div>
-						<div class = "star">
+						<div class = "section-desc__block star">
 							<div class = "star__title">
 								Водитель
 							</div>
@@ -222,7 +216,7 @@
 								<img class = "star__item" src = "./Project/star.svg" alt = "logo-star">
 							</div>
 						</div>
-						<div class = "star">
+						<div class = "section-desc__block star">
 							<div class = "star__title">
 								Пассажир
 							</div>
@@ -236,22 +230,22 @@
 						</div>
 					</div>
 				</div>
-				<div class = "score">
-							<img class = "score__item_icon" src = "./Project/icon_safe.svg" alt = "logo-safe">
-						<div class = "score__item_text">
+				<div class = "text__aside score">
+							<img class = "score__icon" src = "./Project/icon_safe.svg" alt = "logo-safe">
+						<div class = "score__item">
 							5 звезд
-							<span class = "score__item">
+							<span class = "score__span">
 								безопасности
 							</span>
 						</div>
 					</div>
-				<div class = "button">
-					<div class = "button__item_big-info button__item_alt">
-						<img class = "button__item_icon button__item_icon-main" src = "./Project/icon_info.svg" alt = "logo-info">	
-						<a href="#" class = "button__item_link-info">Узнать больше</a>
+				<div class = "buttons">
+					<div class = "button">
+						<img class = "button__icon" src = "./Project/icon_info.svg" alt = "logo-info">	
+						<a href="#" class = "button__link button__link_info">Узнать больше</a>
 					</div>
-					<div class = "button__item_big-order button__item_big-right">
-						<a href="#" class = "button__item_link btn__item_order button__item_link-white">Заказать</a>
+					<div class = "button-order section-desc__button-order">
+						<a href="#" class = "button__link button-order__link button-order__link_color">Заказать</a>
 					</div>
 				</div>
 			</div>
